<resources>
    <string name="app_name">StudentManagement</string>
    <string name="title_home">Sinh viên</string>
    <string name="title_dashboard">Thanh toán</string>
    <string name="title_notifications">Thống kê</string>
    <string name="type_student_name">Nhập tên sinh viên</string>
    <string name="type_student_code">Nhập mã sinh viên</string>
    <string name="type_student_birthday">Ngày sinh</string>
    <string name="cntt">Công nghệ thông tin</string>
    <string name="add">Thêm</string>
    <string name="add_student">Thêm sinh viên</string>
    <string name="exist_student">Đã tồn tại mã sinh viên này</string>
    <string name="add_student_success">Thêm thành công</string>
    <string name="update_student_success">Sửa thành công</string>
    <string name="type_phone">Nhập số điện thoại</string>
    <string name="detail_student">Thông tin sinh viên</string>
    <string name="student_code">Mã sinh viên: %s</string>
    <string name="student_name">Tên sinh viên: %s</string>
    <string name="student_phone">Số điện thoại: %s</string>
    <string name="student_department_code">Mã khoa: %s</string>
    <string name="student_department_name">Khoa: %s</string>
    <string name="student_room_code">Mã phòng: %s</string>
    <string name="student_room_name">Phòng: %s</string>
    <string name="electricity_bill">Tiền điện</string>
    <string name="type_water_bill">Tiền nước</string>
    <string name="type_date_ayment">Ngày thanh toán</string>
    <string name="type_room_bill">Tiền phòng</string>
    <string name="accept">Xác nhận</string>
    <string name="add_payment">Thanh toán thành công</string>
    <string name="search_payment">Tìm kiếm hóa đơn</string>
    <string name="payment_code">Mã hóa đơn: %s</string>
    <string name="electricity_bill_format">Tiền điện: %sđ</string>
    <string name="water_bill_format">Tiền nước: %sđ</string>
    <string name="room_bill_format">Tiền phòng: %sđ</string>
    <string name="date_payment_format">Ngày thanh toán: %s</string>
    <string name="room">Phòng</string>
    <string name="list_student_room">Sinh viên phòng: %s</string>
    <string name="not_user_name">Tài khoản không được để trống</string>
    <string name="not_password">Mật khẩu trống</string>
    <string name="user_name">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="setting">Thiết lập</string>
    <string name="student">Sinh viên</string>
    <string name="payment">Thanh toán</string>
    <string name="address">Địa chỉ</string>
    <string name="sex">Giới tính: %s</string>
    <string name="address2">Địa chỉ: %s</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="forget_password">Quên mật khẩu</string>
    <string name="foget_password">Lấy lại mật khẩu</string>
    <string name="reset_password">Đặt lại mật khẩu</string>
    <string name="password_new">Mật khẩu mới</string>
    <string name="password_old">Mật khẩu cũ</string>
</resources>