<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/bg_app">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back"
            android:tint="@color/design_default_color_primary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/design_default_color_primary"
            android:textSize="17dp" />


    </androidx.appcompat.widget.LinearLayoutCompat>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="80dp"
        android:orientation="vertical">


        <!--        <com.google.android.material.textfield.TextInputEditText-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_margin="20dp"-->
        <!--            android:hint="TextInputEditText" />-->


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.Design.TextInputLayout"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tipUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordOld"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            style="@style/Widget.Design.TextInputLayout"
            app:passwordToggleTint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tipPasswordOld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_old"
                android:inputType="textPassword"
                android:maxLines="1" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordNew"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            style="@style/Widget.Design.TextInputLayout"
            app:passwordToggleTint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tipPasswordNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_new"
                android:inputType="textPassword"
                android:maxLines="1" />


        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_radius_blue"
            android:gravity="center"
            android:text="@string/foget_password"
            android:textColor="@color/design_default_color_primary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:visibility="gone"
            tools:visibility="visible"
            android:id="@+id/tvResetPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_radius_blue"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textColor="@color/design_default_color_primary" />

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>